<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginTop="11dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions"
        />

    <TextView
        android:id="@+id/tvCurrentGameResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/result_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <ImageView
        android:id="@+id/ivCurrentPlayerThrow"
        android:layout_width="110dp"
        android:layout_height="147dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:background="#3F51B5"
        android:src="@drawable/paper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <ImageView
        android:id="@+id/ivCurrentComputerThrow"
        android:layout_width="110dp"
        android:layout_height="147dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:background="#3F51B5"
        android:src="@drawable/paper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tvVersus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/vs"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/ivCurrentComputerThrow"
        app:layout_constraintStart_toEndOf="@+id/ivCurrentPlayerThrow"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentGameResult" />

    <ImageButton
        android:id="@+id/ibRock"
        android:layout_width="120dp"
        android:layout_height="146dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/rock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ibPaper"
        android:layout_width="120dp"
        android:layout_height="146dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibScissors"
        app:layout_constraintStart_toEndOf="@+id/ibRock" />

    <ImageButton
        android:id="@+id/ibScissors"
        android:layout_width="120dp"
        android:layout_height="146dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnToHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="8dp"
        android:text="@string/to_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVersus" />

</androidx.constraintlayout.widget.ConstraintLayout>